//! This code was AUTOGENERATED using the codama library.
//! Please DO NOT EDIT THIS FILE, instead use visitors
//! to add features, then rerun codama to update it.
//!
//! <https://github.com/codama-idl/codama>
//!
syntax = "proto3";

package vixen.parser.pump_fees;

message GetFeesIx {
	GetFeesIxAccounts accounts = 1;
	GetFeesIxData data = 2;
}

message InitializeFeeConfigIx {
	InitializeFeeConfigIxAccounts accounts = 1;
}

message UpdateAdminIx {
	UpdateAdminIxAccounts accounts = 1;
}

message UpdateFeeConfigIx {
	UpdateFeeConfigIxAccounts accounts = 1;
	UpdateFeeConfigIxData data = 2;
}

message UpsertFeeTiersIx {
	UpsertFeeTiersIxAccounts accounts = 1;
	UpsertFeeTiersIxData data = 2;
}


message FeeTier {
	string market_cap_lamports_threshold = 1;
	Fees fees = 2;
}

message Fees {
	uint64 lp_fee_bps = 1;
	uint64 protocol_fee_bps = 2;
	uint64 creator_fee_bps = 3;
}

message InitializeFeeConfigEvent {
	int64 timestamp = 1;
	string admin = 2;
	string fee_config = 3;
}

message UpdateAdminEvent {
	int64 timestamp = 1;
	string old_admin = 2;
	string new_admin = 3;
}

message UpdateFeeConfigEvent {
	int64 timestamp = 1;
	string admin = 2;
	string fee_config = 3;
	repeated FeeTier fee_tiers = 4;
	Fees flat_fees = 5;
}

message UpsertFeeTiersEvent {
	int64 timestamp = 1;
	string admin = 2;
	string fee_config = 3;
	repeated FeeTier fee_tiers = 4;
	uint32 offset = 5;
}


message FeeConfig {
	uint32 bump = 1;
	string admin = 2;
	Fees flat_fees = 3;
	repeated FeeTier fee_tiers = 4;
}


message GetFeesIxAccounts {
	string fee_config = 1;
	string config_program_id = 2;
}

message GetFeesIxData {
	bool is_pump_pool = 1;
	string market_cap_lamports = 2;
	uint64 trade_size_lamports = 3;
}

message InitializeFeeConfigIxAccounts {
	string admin = 1;
	string fee_config = 2;
	string system_program = 3;
	string config_program_id = 4;
	string event_authority = 5;
	string program = 6;
}


message UpdateAdminIxAccounts {
	string admin = 1;
	string fee_config = 2;
	string new_admin = 3;
	string config_program_id = 4;
	string event_authority = 5;
	string program = 6;
}


message UpdateFeeConfigIxAccounts {
	string fee_config = 1;
	string admin = 2;
	string config_program_id = 3;
	string event_authority = 4;
	string program = 5;
}

message UpdateFeeConfigIxData {
	repeated FeeTier fee_tiers = 1;
	Fees flat_fees = 2;
}

message UpsertFeeTiersIxAccounts {
	string fee_config = 1;
	string admin = 2;
	string config_program_id = 3;
	string event_authority = 4;
	string program = 5;
}

message UpsertFeeTiersIxData {
	repeated FeeTier fee_tiers = 1;
	uint32 offset = 2;
}


message ProgramState {
    oneof state_oneof {
        	FeeConfig fee_config = 1;
        }
}

message ProgramIxs {
    oneof ix_oneof {
        	GetFeesIx get_fees = 1;
        	InitializeFeeConfigIx initialize_fee_config = 2;
        	UpdateAdminIx update_admin = 3;
        	UpdateFeeConfigIx update_fee_config = 4;
        	UpsertFeeTiersIx upsert_fee_tiers = 5;
        }
}

